--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -3,17 +3,53 @@
 .navbar {
   font-family: 'Montserrat', sans-serif;
   display: flex;
-  justify-content: center;
-  padding-top: 50px;
+  justify-content: space-between;
+  align-items: baseline;
+  height: 100px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.navbar__brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar__brand--logo {
+  width: 50px;
+  height: 50px;
+  background-color: var(--white-color);
+  border-radius: 50%;
+}
+
+.navbar__brand--name {
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--white-color);
+  padding-left: 10px;
+}
+
+.navbar__list {
+  display: flex;
+  align-items: baseline;
+}
+
+.navbar__list ul {
+  margin: 0;
+  padding: 0;
 }
 
 .navbar__link {
-  font-size: 24px !important;
-  font-weight: 200 !important;
-  color: var(--white-color) !important;
+  font-size: 24px;
+  font-weight: 200;
+  color: var(--white-color);
   display: inline-block;
   position: relative;
   margin-left: 50px;
+}
+
+.navbar__link:first-child {
+  margin-left: 0;
 }
 
 .navbar__link::after {
@@ -26,10 +62,26 @@
   left: 25%;
   background-color: var(--white-color);
   transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
+  transition: transform 0.25s ease;
 }
 
 .navbar__link:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.navbar__button {
+  width: 213px;
+  height: 58px;
+  border: none;
+  box-shadow: 0px 9px 28px rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  font-size: 20px;
+  color: var(--pink-color);
+  transition: 0.25s ease-out;
+}
+
+.navbar__button:hover {
+  color: var(--pink-color);
+  background-color: var(--white-color);
 }
