--- a/src/components/body/homepage/homepage.css
+++ b/src/components/body/homepage/homepage.css
@@ -43,17 +43,21 @@
   border-radius: 10px;
   font-size: 20px;
   font-weight: 500;
+  color: var(--white-color);
+  background: linear-gradient(45deg, var(--pink-color), var(--orange-color));
+  transition: 0.25s ease-in;
+
+  background-size: 200% 100%;
+  background-position: 100% 0;
+  transition: background-position 0.5s;
 }
 
 .homepage__button:first-child {
-  border: 3px solid var(--white-color);
   margin-right: 50px;
-  color: var(--white-color);
-  background-color: transparent;
 }
 
 .homepage__button:last-child {
-  color: var(--orange-color);
+  border: 3px solid var(--white-color);
 }
 
 .homepage__button:hover {
@@ -62,14 +66,52 @@
     var(--orange-color),
     var(--pink-color)
   );
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
+  background-position: 0 0;
 }
 
-.homepage__button:last-child:hover {
-  background-image: linear-gradient(
-    45deg,
-    var(--orange-color),
-    var(--pink-color)
-  );
-  color: var(--white-color);
-  border: 3px solid var(--white-color);
+/* Decoration */
+.homepage::before {
+  position: absolute;
+  content: '';
+  border: 2px solid var(--white-color);
+  border-radius: 50%;
+  width: 27px;
+  height: 27px;
+  top: -40px;
+  left: 280px;
+}
+
+.homepage::after {
+  position: absolute;
+  content: '';
+  background-color: var(--white-color);
+  border: 2px solid var(--white-color);
+  border-radius: 50%;
+  width: 27px;
+  height: 27px;
+  top: 120px;
+  left: 200px;
+}
+
+.homepage p::before {
+  position: absolute;
+  content: '';
+  border: 2px solid var(--white-color);
+  border-radius: 50%;
+  width: 27px;
+  height: 27px;
+  right: 170px;
+  top: 100px;
+}
+
+.homepage p::after {
+  position: absolute;
+  content: '';
+  background-color: var(--white-color);
+  border: 2px solid var(--white-color);
+  border-radius: 50%;
+  width: 47px;
+  height: 47px;
+  top: -60px;
 }
