--- a/src/components/body/aboutme/aboutme.css
+++ b/src/components/body/aboutme/aboutme.css
@@ -1,9 +1,7 @@
 @import '../../../index.css';
 
 .aboutme {
-  position: absolute;
-  top: calc(var(--theme-height) - 350px);
-  margin: 0 50px;
+  margin: 200px 50px 100px 50px;
 }
 
 .aboutme__heading h2 {
@@ -13,6 +11,11 @@
   font-weight: 700;
   font-size: 32px;
   line-height: 39px;
+}
+
+.aboutme__heading h1 {
+  font-weight: 800;
+  font-size: 40px;
 }
 
 .aboutme__story {
@@ -65,17 +68,12 @@
 }
 
 .aboutme__technical-skill h1 {
-  color: var(--pink-color);
+  color: var(--orange-color);
   font-weight: 700;
   font-size: 32px;
   line-height: 39px;
-}
-
-.aboutme__technical-skill hr {
-  border: 5px solid var(--pink-color);
-  opacity: 1;
-  width: 10%;
-  margin-top: 50px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .aboutme__technical-skill img {
