--- a/src/components/body/works/works.css
+++ b/src/components/body/works/works.css
@@ -2,7 +2,6 @@
 
 .works {
   margin: 100px 50px;
-  width: 100%;
 }
 
 .works hr {
@@ -25,9 +24,50 @@
   font-size: 40px;
 }
 
+.works__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.works__card {
+  margin-top: 50px;
+  width: 30%;
+  position: relative;
+}
+
+.works__card--desc {
+  margin: 20px 0px;
+  text-align: justify;
+}
+
 .works__card--thumb {
-  width: 394px;
+  width: 100%;
   height: 276px;
   background: var(--linear-color);
   border-radius: 10px;
+}
+
+.card__buttons {
+  display: flex;
+}
+
+.card__buttons button {
+  font-weight: 400;
+  font-size: 15px;
+  width: 100%;
+  border: 1px solid var(--pink-color);
+  border-radius: 10px;
+  padding: 5px;
+  background: transparent;
+  transition: 0.2s ease-out;
+}
+
+.card__buttons button:first-child {
+  margin-right: 20px;
+}
+
+.card__buttons button:hover {
+  background: var(--linear-color);
+  color: var(--white-color);
 }
