--- a/src/page/works/works.scss
+++ b/src/page/works/works.scss
@@ -1,4 +1,4 @@
-@import '../../../index.css';
+@import '../../styles/global.scss';
 
 .works {
   margin: 100px 50px;
@@ -48,7 +48,7 @@
 
 .works__card--thumb {
   width: 100%;
-  max-height: 276px;
+  max-height: 290px;
 }
 
 .works__card--thumb img {
