--- a/src/page/aboutme/aboutme.scss
+++ b/src/page/aboutme/aboutme.scss
@@ -1,128 +1,58 @@
 @import '../../styles/global.scss';
 
 .aboutme {
-  margin: 100px 50px 50px 50px;
-  padding-top: 75px;
-}
+  margin: 300px 50px 200px 50px;
+  padding-top: 100px;
 
-.aboutme hr {
-  border: 5px solid var(--pink-color);
-  opacity: 1;
-  width: 10%;
-}
-
-.aboutme__heading h2 {
-  color: var(--pink-color);
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 39px;
-}
-
-.aboutme__heading h1 {
-  font-weight: 800;
-  font-size: 40px;
-}
-
-.aboutme__story {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 40px;
-}
-
-.aboutme__story--history {
-  font-size: 20px;
-  text-align: right;
-  width: 50%;
-  text-align: justify;
-}
-
-.aboutme__story--history span {
-  font-weight: 700;
-  color: var(--white-color);
-  padding: 2px;
-  background: var(--linear-color);
-}
-
-.aboutme__skillsets {
-  width: 193px;
-  height: 57px;
-  border: none;
-  box-shadow: 0px 9px 28px rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
-  font-size: 20px;
-  font-weight: 500;
-  color: var(--white-color);
-  background: var(--linear-color);
-  transition: 0.25s ease-in;
-
-  background-size: 200% 100%;
-  background-position: 100% 0;
-
-  transition: background-position 0.5s;
-}
-
-.aboutme__skillsets a {
-  text-decoration: none;
-  color: var(--white-color);
-  margin: 0;
-  padding: 0;
-}
-
-@-webkit-keyframes bounce {
-  to {
-    -webkit-transform: scale(1.2);
+  .aboutme__story {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 90px;
+  
+    .aboutme__story--journey {
+      font-size: 25px;
+      line-height: 40px;
+      width: 50%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    
+      p {
+        text-align: justify;
+      }
+    
+      strong {
+        font-weight: 700;
+        color: var(--white-color);
+        padding: 3px;
+        background: var(--linear-color);
+        line-height: 50px;
+      }
+    }
+  
+    .aboutme__story--passion {
+      display: flex;
+      flex-direction: column;
+      justify-content: baseline;
+      
+      img {
+        width: 400px;
+        border-radius: 20px;
+        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
+      }
+      h4 {
+        position: absolute;
+        font-weight: 800;
+        font-size: 5rem;
+        margin-left: 10px;
+        color: rgba(0, 0, 0, 0.6);
+        padding-top: 4%;
+        padding-left: 8%;
+        text-transform: uppercase;
+      }
+    }
   }
-}
-@-moz-keyframes bounce {
-  to {
-    -moz-transform: scale(1.2);
-  }
-}
-@keyframes bounce {
-  to {
-    transform: scale(1.2);
-  }
-}
-
-.aboutme__skillsets:hover {
-  background-image: var(--linear-color);
-  box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
-  -webkit-animation: bounce 0.4s infinite alternate;
-  -moz-animation: bounce 0.4s infinite alternate;
-  animation: bounce 0.4s infinite alternate;
-  text-decoration: none;
-}
-.aboutme__skillsets a:hover {
-  color: var(--white-color) !important;
-}
-
-.aboutme__story--passion {
-  display: flex;
-  flex-direction: column;
-  justify-content: baseline;
-}
-
-.aboutme__story--passion img {
-  width: 300px;
-  border-radius: 20px;
-  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
-}
-
-.aboutme__story--passion h4 {
-  position: absolute;
-  font-weight: 800;
-  font-size: 5rem;
-  margin-left: 10px;
-  color: rgba(0, 0, 0, 0.6);
-  padding-top: 4%;
-  padding-left: 4%;
-  text-transform: uppercase;
-}
-
-.aboutme__story--passion p {
-  font-size: 22px;
 }
