--- a/src/page/contact/contact.scss
+++ b/src/page/contact/contact.scss
@@ -1,59 +1,26 @@
 @import '../../styles/global.scss';
 
-.contact {
+#contact {
   margin: 100px 120px;
-}
+  
+  .contact__wrapper {
+    background-image: var(--linear-color);
+    text-align: center;
+    padding: 50px;
+    border-radius: 20px;
 
-.contact__wrapper {
-  background-image: var(--linear-color);
-  text-align: center;
-  padding: 50px;
-}
+    h1 {
+      font-weight: 800;
+      font-size: 48px;
+      line-height: 59px;
+      color: var(--white-color);
+    }
 
-.contact__wrapper h1 {
-  font-weight: 800;
-  font-size: 48px;
-  line-height: 59px;
-  color: var(--white-color);
-}
-
-.contact__buttons {
-  margin-top: 30px;
-  display: flex;
-  justify-content: center;
-}
-
-.contact__buttons button {
-  padding: 10px;
-  background-color: var(--white-color);
-  color: var(--pink-color);
-  font-size: 24px;
-  width: 10%;
-  border: none;
-  border-radius: 10px;
-  margin: 0px 10px;
-  transition: 0.25s ease-out;
-}
-
-.contact__buttons button:hover {
-  box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
-  -webkit-animation: bounce 0.4s infinite alternate;
-  -moz-animation: bounce 0.4s infinite alternate;
-  animation: bounce 0.4s infinite alternate;
-}
-
-@-webkit-keyframes bounce {
-  to {
-    -webkit-transform: scale(1.2);
-  }
-}
-@-moz-keyframes bounce {
-  to {
-    -moz-transform: scale(1.2);
-  }
-}
-@keyframes bounce {
-  to {
-    transform: scale(1.2);
+    .contact__buttons {
+      margin-top: 30px;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
   }
 }
