--- a/src/page/homepage/homepage.scss
+++ b/src/page/homepage/homepage.scss
@@ -4,9 +4,15 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 80px 150px;
   height: 100%;
   margin-top: 8%;
+
+  #theme-img {
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    z-index: -10000;
+  }
 
   &::before {
     position: absolute;
@@ -15,7 +21,7 @@
     border-radius: 50%;
     width: 27px;
     height: 27px;
-    top: 28%;
+    top: 20%;
     left: 28%;
   }
 
@@ -28,7 +34,7 @@
     width: 27px;
     height: 27px;
     left: 20%;
-    top: 45%;
+    top: 35%;
   }
 
   h1 {
@@ -49,7 +55,7 @@
     line-height: 40px;
     text-align: center;
     color: var(--white-color);
-    padding: 40px 100px;
+    padding: 40px 20%;
 
     &::before {
       position: absolute;
@@ -58,8 +64,8 @@
       border-radius: 50%;
       width: 27px;
       height: 27px;
-      right: 15%;
-      top: 42%;
+      right: 20%;
+      top: 40%;
     }
 
     &::after {
@@ -70,7 +76,8 @@
       border-radius: 50%;
       width: 47px;
       height: 47px;
-      top: 25%;
+      top: 18%;
+      right: 25%
     }
     
   }
@@ -81,59 +88,7 @@
   justify-content: center;
 }
 
-.homepage__button {
-  width: 193px;
-  height: 57px;
-  border: none;
-  box-shadow: 0px 9px 28px rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
-  font-size: 20px;
-  font-weight: 500;
-  color: var(--white-color);
-  background: var(--linear-color);
-  transition: 0.25s ease-in;
-
-  background-size: 200% 100%;
-  background-position: 100% 0;
-
-  transition: background-position 0.5s;
+// Laptop L
+@media (max-width: 2559px) {
+ 
 }
-
-@-webkit-keyframes bounce {
-  to {
-    -webkit-transform: scale(1.2);
-  }
-}
-@-moz-keyframes bounce {
-  to {
-    -moz-transform: scale(1.2);
-  }
-}
-@keyframes bounce {
-  to {
-    transform: scale(1.2);
-  }
-}
-
-.homepage__button:first-child {
-  margin-right: 50px;
-}
-
-.homepage__button:last-child {
-  border: 3px solid var(--white-color);
-}
-
-.homepage__button:hover {
-  background-image: var(--linear-color);
-  box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
-  -webkit-animation: bounce 0.4s infinite alternate;
-  -moz-animation: bounce 0.4s infinite alternate;
-  animation: bounce 0.4s infinite alternate;
-}
-
-.homepage__button a,
-.homepage__button a:hover {
-  color: var(--white-color);
-  text-decoration: none;
-}
-
