--- a/src/page/homepage/homepage.scss
+++ b/src/page/homepage/homepage.scss
@@ -7,38 +7,29 @@
   height: 100%;
   margin-top: 8%;
 
-  #theme-img {
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    z-index: -10000;
-  }
-
   &::before {
     position: absolute;
     content: '';
-    border: 2px solid var(--white-color);
+    border: 2px solid $--white-color;
     border-radius: 50%;
     width: 27px;
     height: 27px;
-    top: 20%;
+    top: 18%;
     left: 28%;
   }
 
   &::after {
     position: absolute;
     content: '';
-    background-color: var(--white-color);
-    border: 2px solid var(--white-color);
+    border: 2px solid $--white-color;
     border-radius: 50%;
     width: 27px;
     height: 27px;
     left: 20%;
-    top: 35%;
+    top: 43%;
   }
 
   h1 {
-   font-family: 'Montserrat';
    font-style: normal;
    font-weight: 800;
    font-size: 90px;
@@ -48,35 +39,33 @@
   }
   
   p {
-    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
     text-align: center;
-    color: var(--white-color);
+    color: $--white-color;
     padding: 40px 20%;
 
     &::before {
       position: absolute;
       content: '';
-      border: 2px solid var(--white-color);
+      border: 2px solid $--white-color;
       border-radius: 50%;
       width: 27px;
       height: 27px;
-      right: 20%;
-      top: 40%;
+      right: 13%;
+      top: 42%;
     }
 
     &::after {
       position: absolute;
       content: '';
-      background-color: var(--white-color);
-      border: 2px solid var(--white-color);
+      border: 2px solid $--white-color;
       border-radius: 50%;
       width: 47px;
       height: 47px;
-      top: 18%;
+      top: 17%;
       right: 25%
     }
     
@@ -88,7 +77,41 @@
   justify-content: center;
 }
 
-// Laptop L
-@media (max-width: 2559px) {
- 
+// Laptop
+@media (min-width: 1024px) and (max-width: 1439px) {
+  .homepage {
+    margin-top: 4%;
+
+    &::before { 
+      top: 10%;
+    }
+    &::after { 
+      top: 30%;
+      left: 10%;
+    }
+
+    h1 {
+      font-size: 50px;
+      line-height: 70px;
+    }
+
+    p {
+      font-size: 20px;
+      line-height: 30px;
+      padding: 20px 20%;
+
+      &::before { 
+        width: 20px;
+        height: 20px;
+        right: 13%;
+        top: 40%;
+      }
+      &::after { 
+        width: 20px;
+        height: 20px;
+        right: 13%;
+        top: 14%;
+      }
+    }
+  } 
 }
