--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,25 +1,25 @@
 @import '../../styles/global.scss';
 
 .button {
-    color: $--white-color;
-    text-decoration: none;
-    border-radius: 10px;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
-    transition: 0.25s ease-out;
-    padding: 10px 30px;
-    width: fit-content;
+  color: $--white-color;
+  text-decoration: none;
+  border-radius: 10px;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  transition: 0.25s ease-out;
+  padding: 10px 30px;
+  width: fit-content;
 
-    &:hover {
-      cursor: pointer;
-        box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
-        -webkit-animation: bounce 0.4s infinite alternate;
-        -moz-animation: bounce 0.4s infinite alternate;
-        animation: bounce 0.4s infinite alternate;
-      } 
+  &:hover {
+    cursor: pointer;
+      box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
+      -webkit-animation: bounce 0.4s infinite alternate;
+      -moz-animation: bounce 0.4s infinite alternate;
+      animation: bounce 0.4s infinite alternate;
+    } 
 }
 
 .button--pink {
@@ -56,7 +56,7 @@ to {
 }
 
 .link {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 200;
     color: var(--white-color);
     display: inline-block;
@@ -92,8 +92,6 @@ to {
       }
 }
 
-
-
 #aboutme__skillsets {
   margin-top: 20px;
 }
@@ -113,5 +111,20 @@ to {
 
   &:first-child {
     margin-left: 0;
+  }
+}
+
+// Laptop
+@media (min-width: 1024px) and (max-width: 1439px) {
+  .button, .button--white, .button--pink, .link {
+    font-size: 16px;
+  }
+
+  .link {
+    margin-left: 20px;
+  }
+
+  .button--white, .button--pink {
+    padding: 10px;
   }
 }
