--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -8,29 +8,44 @@
   margin: 0px 40px;
   background: transparent;
   color: $--white-color;
+  
+  .navbar__brand {
+    display: flex;
+    align-items: center;
+    
+    .navbar__brand--logo {
+      width: 50px;
+      height: 50px;
+      background-color: var(--white-color);
+      border-radius: 50%;
+    }
+    
+    .navbar__brand--name {
+      font-size: 30px;
+      font-weight: 600;
+      color: var(--white-color);
+      padding-left: 10px;
+    }
+  }
+  
+  .navbar__list {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+  }
 }
 
-.navbar__brand {
-  display: flex;
-  align-items: center;
-}
+// Laptop
+@media (min-width: 1024px) and (max-width: 1439px) {
+  .navbar__brand {
 
-.navbar__brand--logo {
-  width: 50px;
-  height: 50px;
-  background-color: var(--white-color);
-  border-radius: 50%;
-}
+    .navbar__brand--logo {
+      width: 30px !important;
+      height: 30px !important;
+    }
 
-.navbar__brand--name {
-  font-size: 30px;
-  font-weight: 600;
-  color: var(--white-color);
-  padding-left: 10px;
-}
-
-.navbar__list {
-  display: flex;
-  align-items: baseline;
-  flex-wrap: wrap;
+    .navbar__brand--name {
+      font-size: 20px !important;
+    }
+  }
 }
