--- a/src/page/aboutme/aboutme.scss
+++ b/src/page/aboutme/aboutme.scss
@@ -7,7 +7,7 @@
   .aboutme__story {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 90px;
   
@@ -37,8 +37,10 @@
       display: flex;
       flex-direction: column;
       justify-content: baseline;
+      width: fit-content;
       
       img {
+        position: relative;
         width: 400px;
         border-radius: 20px;
         box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
@@ -46,12 +48,27 @@
       h4 {
         position: absolute;
         font-weight: 800;
-        font-size: 5rem;
-        margin-left: 10px;
+        font-size: 4rem;
         color: rgba(0, 0, 0, 0.6);
         padding-top: 4%;
-        padding-left: 8%;
+        padding-left: 4%;
         text-transform: uppercase;
+      }
+    }
+  }
+}
+
+ // Laptop
+@media (min-width: 1024px) and (max-width: 1439px) {
+  .aboutme {
+    padding-top: 10px;
+
+    .aboutme__story {
+      margin-top: 50px;
+
+      .aboutme__story--journey {
+        font-size: 18px;
+        line-height: 180%;
       }
     }
   }
