--- a/src/page/skillsets/skillsets.scss
+++ b/src/page/skillsets/skillsets.scss
@@ -49,7 +49,8 @@
             }
   
             img {
-              height: 150px;
+             
+              height: 100px;
               margin: 30px;
             }
           }        
@@ -58,7 +59,7 @@
     }
   
     .decoration {
-      width: 30%;
+      width: 20%;
       border-radius: 20px;
       box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
       margin-top: 200px;
@@ -66,3 +67,6 @@
   }
 }
 
+@media (max-width: 1023px) {
+
+}
