--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,3 +4,10 @@
     background-image: url('../img/homepage.png');
     background-repeat: no-repeat;
 }
+
+// Laptop
+@media (min-width: 1024px) and (max-width: 1439px) {
+    .theme {
+      background-size: contain;
+    }
+}
