Finished responsive design on tablet, working on responsive on mobile

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -23,19 +23,19 @@
 }
 
 .button--pink {
-  color: var(--white-color) !important;
-  background: var(--linear-color);
+  color: $--white-color !important;
+  background: $--linear-color;
 }
 
 .button--white {
-  color: var(--pink-color);
+  color: $--pink-color;
   background-color: $--white-color;
   border: none;
   font-weight: 300;
   
   &:hover {
-      color: var(--pink-color);
-      background-color: var(--white-color);
+      color: $--pink-color;
+      background-color: $--white-color;
   }
 }
 
@@ -80,7 +80,7 @@ to {
         height: 2px;
         bottom: 0;
         left: 25%;
-        background-color: var(--white-color);
+        background-color: $--white-color;
         transform-origin: bottom right;
         transition: transform 0.25s ease;
       }
@@ -97,7 +97,7 @@ to {
 }
 
 #my-work {
-  border: 3px solid var(--white-color);
+  border: 3px solid $--white-color;
   margin-left: 50px;
 }
 
@@ -113,6 +113,20 @@ to {
     margin-left: 0;
   }
 }
+
+#downloadCV {
+  margin-left: 20px;
+}
+
+#closeNav {
+  display: none;
+  padding: 0;
+  font-size: 30px;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+}
+
 
 // Laptop
 @media (min-width: 1024px) and (max-width: 1439px) {
@@ -133,14 +147,53 @@ to {
     margin-left: 20px;
   }
 }
+
+//Tablet
 @media (min-width: 768px) and (max-width: 1023px) {
+  #closeNav {
+    display: block;
+  }
+
+  #toggle {
+    padding: 10px !important;
+    font-size: 30px;
+  }
   .button, .button--white, .button--pink, .link {
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
   }
 
   .link {
-    margin-left: 20px;
+    padding: 10px 0px;
+    color: $--pink-color;
+    font-size: 20px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+
+    &:hover {
+      padding: 10px 20px;
+      color: $--white-color;
+      background: $--linear-color;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 50%;
+      transform: scaleX(0);
+      height: 2px;
+      bottom: 5px;
+      left: 25%;
+      background-color: $--white-color;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease;
+    }
+
+  &:hover:after {
+      cursor: pointer;
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
   }
 
   .button--white, .button--pink {
@@ -148,7 +201,92 @@ to {
   }
 
   .contact-info {
-    font-size: 40px;
+    font-size: 30px;
     margin-left: 20px;
+  }
+
+  #downloadCV {
+    margin-left: 0;
+    background: $--linear-color !important;
+    color: $--white-color;
+    font-size: 20px;
+
+    &:hover {
+     border: 2px solid $--pink-color;
+    }
+  }
+}
+
+//Mobile
+@media (max-width: 767px) {
+  #closeNav {
+    display: block;
+  }
+
+  #toggle {
+    padding: 10px !important;
+    font-size: 30px;
+  }
+
+  .button {
+    padding: 5px 10px !important;
+  }
+
+  .button, .button--white, .button--pink, .link {
+    font-size: 12px;
+    text-align: center;
+  }
+
+  .link {
+    padding: 10px 0px;
+    color: $--pink-color;
+    font-size: 16px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+
+    &:hover {
+      padding: 10px 20px;
+      color: $--white-color;
+      background: $--linear-color;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 50%;
+      transform: scaleX(0);
+      height: 2px;
+      bottom: 5px;
+      left: 25%;
+      background-color: $--white-color;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease;
+    }
+
+  &:hover:after {
+      cursor: pointer;
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+  }
+
+  .button--white, .button--pink {
+    padding: 10px;
+  }
+
+  .contact-info {
+    font-size: 30px;
+    margin-left: 20px;
+  }
+
+  #downloadCV {
+    margin-left: 0;
+    background: $--linear-color !important;
+    color: $--white-color;
+    font-size: 14px;
+
+    &:hover {
+     border: 2px solid $--pink-color;
+    }
   }
 }
