--- a/src/page/works/works.scss
+++ b/src/page/works/works.scss
@@ -50,7 +50,7 @@
         width: 100%;
         border: none;
         transition: all .4s ease-in-out;
-      background-color: transparent;
+        background-color: transparent;
 
         &:hover {
           cursor: pointer;
@@ -83,6 +83,68 @@
 
         p {
           font-size: 16px !important;
+        }
+      }
+    }
+  }
+}
+
+//Tablet
+@media (min-width: 768px) and (max-width: 1023px) {
+  .works {
+    padding-top: 20px;
+
+    .works__card {
+      margin-top: 30px !important;
+      width: 30% !important;
+
+      .works__card--desc {
+        h4 {
+          font-size: 16px !important;
+        }
+
+        p {
+          font-size: 14px !important;
+        }
+
+        .work-tech {
+          margin-top: 5px !important;
+
+          img {
+            width: 20px !important; 
+            margin: 0px 10px 20px 0;
+          }
+        }
+      }
+    }
+  }
+}
+
+//Mobile
+@media (max-width: 767px) {
+  .works {
+    padding-top: 20px;
+
+    .works__card {
+      margin-top: 30px !important;
+      width: 30% !important;
+
+      .works__card--desc {
+        h4 {
+          font-size: 16px !important;
+        }
+
+        p {
+          font-size: 14px !important;
+        }
+
+        .work-tech {
+          margin-top: 5px !important;
+
+          img {
+            width: 20px !important; 
+            margin: 0px 10px 20px 0;
+          }
         }
       }
     }
