--- a/src/page/contact/contact.scss
+++ b/src/page/contact/contact.scss
@@ -24,3 +24,17 @@
     }
   }
 }
+
+//Tablet
+@media (min-width: 768px) and (max-width: 1023px) {
+  h1 {
+    font-size: 40px !important;
+  }
+}
+
+//Mobile
+@media (max-width: 767px){
+  h1 {
+    font-size: 40px !important;
+  }
+}
