--- a/src/page/skillsets/skillsets.scss
+++ b/src/page/skillsets/skillsets.scss
@@ -65,6 +65,7 @@
   }
 }
 
+// Laptop
 @media (min-width: 1024px) and (max-width: 1439px) {
   .technical-skill {
     padding-top: 20px !important;
@@ -89,5 +90,69 @@
         }
       }
     }
+  }
+}
+
+//Tablet
+@media (min-width: 768px) and (max-width: 1023px) {
+  .technical-skill {
+    padding-top: 20px !important;
+    
+    .technical-skill--knowledge {
+      padding-top: 20px !important;
+
+      h3 {
+        font-size: 20px !important;
+      }
+
+      .technical-skill--knowledge-list {
+        .technical-skill-item {
+          span {
+            font-size: 16px !important;
+            font-weight: 600;
+          }
+          img {
+            height: 60px !important;
+            margin: 23px !important
+          }
+        }
+      }
+    }
+  }
+
+  .decoration {
+    display: none;
+  }
+}
+
+//Mobile
+@media (max-width: 767px) {
+  .technical-skill {
+    padding-top: 20px !important;
+    
+    .technical-skill--knowledge {
+      padding-top: 20px !important;
+
+      h3 {
+        font-size: 20px !important;
+      }
+
+      .technical-skill--knowledge-list {
+        .technical-skill-item {
+          span {
+            font-size: 16px !important;
+            font-weight: 600;
+          }
+          img {
+            height: 60px !important;
+            margin: 23px !important
+          }
+        }
+      }
+    }
+  }
+
+  .decoration {
+    display: none;
   }
 }
